Company's name changed on all files

--- a/src/html/companies-categories-show.html
+++ b/src/html/companies-categories-show.html
@@ -116,9 +116,9 @@
         <ul class='nav navbar-top-links navbar-right profiles'>
             <li class='dropdown profile-element'>
                 <a class='asd dropdown-toggle' data-toggle='dropdown' href='#'>
-                    <img alt='image' class='img-circle' src='https://randomuser.me/api/portraits/med/women/10.jpg'>
+                    <img alt='image' class='img-circle' src='https://randomuser.me/api/portraits/med/women/44.jpg'>
                     <span class=''>
-            <strong class=''>David Williams</strong>
+            <strong class=''>Anne Klein</strong>
             <b class='caret'></b>
           </span>
                 </a>
@@ -156,8 +156,8 @@
         <span>Servers</span>
     </div>
     <div class="col-lg-3 pull-right">
-        <a class="btn btn-default btn-danger pull-right " href="#" role="button"><i class="fa fa-times"></i> Delete Category</a>
-        <a class="btn btn-default btn-default pull-right mr_20" role="button" <i class="fa fa-floppy-o"></i> Save</a>
+        <a class="btn btn-danger pull-right " href="#" role="button"><i class="fa fa-times"></i> Delete Category</a>
+        <a class="btn btn-default pull-right mr_20" role="button" <i class="fa fa-floppy-o"></i> Save</a>
     </div>
 </div>
 <div class='row wrapper backs-nav'>
@@ -176,7 +176,7 @@
         </div>
         <div class="comp-nav-item">
             <a href="#" title="" class="">
-                <i class="fa fa-tags"></i>
+                <i class="fa fa-plus"></i>
                 <span>New Group</span>
             </a>
         </div>
@@ -291,7 +291,7 @@
         <a href="#" class='text-muted'>Contato</a>
     </div>
     <div class="copys pull-left">
-        <span class='text-muted'>Copyright © 2015 Zertico</span>
+        <span class='text-muted'>Copyright © 2015 Foo Inc</span>
     </div>
 </div>
 {% endblock %} {% block javascript %} {% endblock %}
