--- a/src/html/companies-settings.html
+++ b/src/html/companies-settings.html
@@ -116,9 +116,9 @@
         <ul class='nav navbar-top-links navbar-right profiles'>
             <li class='dropdown profile-element'>
                 <a class='asd dropdown-toggle' data-toggle='dropdown' href='#'>
-                    <img alt='image' class='img-circle' src='https://randomuser.me/api/portraits/med/women/10.jpg'>
+                    <img alt='image' class='img-circle' src='https://randomuser.me/api/portraits/med/women/44.jpg'>
                     <span class=''>
-			      <strong class=''>David Williams</strong>
+			      <strong class=''>Anne Klein</strong>
 			      <b class='caret'></b>
 			    </span>
                 </a>
@@ -156,7 +156,7 @@
         <span>Foo Inc.</span>
     </div>
     <div class="col-lg-2 pull-right">
-        <a class="btn btn-default btn-danger" href="#" role="button"><i class="fa fa-times"></i> Delete Company</a>
+        <a class="btn btn-danger" href="#" role="button"><i class="fa fa-times"></i> Delete Company</a>
     </div>
 </div>
 <div class='row wrapper backs-nav'>
@@ -378,8 +378,8 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>wwww.zertico.com</td>
-                                <td>ns1.zertico.com</td>
+                                <td>wwww.Foo Inc.com</td>
+                                <td>ns1.Foo Inc.com</td>
                             </tr>
                         </tbody>
                     </table>
@@ -396,7 +396,7 @@
         <span class='text-muted'>Contato</span>
     </div>
     <div>
-        <span class='text-muted'>Copyright © 2015 Zertico</span>
+        <span class='text-muted'>Copyright © 2015 Foo Inc</span>
     </div>
 </div>
 {% endblock %} {% block javascript %} {% endblock %}
