--- a/src/html/docs.html
+++ b/src/html/docs.html
@@ -30,7 +30,7 @@
                 <small>
                     <strong>Documentation created:</strong> 20/08/2015<br/>
                     <strong>Latest update:</strong> 20/08/2015<br/>
-                    <strong>By:</strong> Zertico Team<br/>
+                    <strong>By:</strong> Foo Inc Team<br/>
                     <strong>Theme Version:</strong> 0.01<br/>
                 </small>
             </div>
@@ -250,7 +250,7 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </section>
             <hr>
             <footer>
-                <p>&copy; Zertico 2015 | Railblocks Base Theme</p>
+                <p>&copy; Foo Inc 2015 | Railblocks Base Theme</p>
             </footer>
         </div>
     </div>
