--- a/src/html/new-reseller.html
+++ b/src/html/new-reseller.html
@@ -124,9 +124,9 @@
 	  <ul class='nav navbar-top-links navbar-right profiles'>
 	    <li class='dropdown profile-element'>
 	      <a class='asd dropdown-toggle' data-toggle='dropdown' href='#'>
-	        <img alt='image' class='img-circle' src='https://randomuser.me/api/portraits/med/women/10.jpg'>
+	        <img alt='image' class='img-circle' src='https://randomuser.me/api/portraits/med/women/44.jpg'>
 	        <span class=''>
-	          <strong class=''>David Williams</strong>
+	          <strong class=''>Anne Klein</strong>
 	          <b class='caret'></b>
 	        </span>
 	      </a>
@@ -275,7 +275,7 @@
     <span class='text-muted'>Contato</span>
   </div>
   <div>
-  	<span class='text-muted'>Copyright © 2015 Zertico</span>
+  	<span class='text-muted'>Copyright © 2015 Foo Inc</span>
   </div>
 </div>
 {% endblock %}
