--- a/src/html/parts/footer.html
+++ b/src/html/parts/footer.html
@@ -43,7 +43,7 @@
                     <div class="col-lg-3 big-footer-menu">
                         <span>Sobre nós</span>
                         <ul>
-                            <li><i class="fa fa-angle-right"></i> A Zertico</li>
+                            <li><i class="fa fa-angle-right"></i> A Foo Inc</li>
                             <li><i class="fa fa-angle-right"></i> Parceria Softlayer</li>
                             <li><i class="fa fa-angle-right"></i> Equipe</li>
                             <li><i class="fa fa-angle-right"></i> Trabalhe conosco</li>
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-8">
-                    <h5>Copyright &copy; 2015 Zertico</h5>
+                    <h5>Copyright &copy; 2015 Foo Inc</h5>
                 </div>
             </div>
         </div>
