--- a/src/html/shop-categories.html
+++ b/src/html/shop-categories.html
@@ -2,7 +2,7 @@
 <div id="page-menu">
     <div class="container clearfix">
         <div class="menu_page_title">
-            Produtos <span>Zertico</span>
+            Produtos <span>Foo Inc</span>
         </div>
         <nav class="mini-nav">
             <ul>
