Company's name changed

--- a/src/html/shop-plans.html
+++ b/src/html/shop-plans.html
@@ -3,7 +3,7 @@
     <div class="container clearfix">
         <div class="menu_page_title">
             Produtos
-            <span>Zertico</span>
+            <span>Foo Inc</span>
         </div>
         <nav>
             <ul>
