Adjusts were done on plans show page

--- a/src/html/plans-show.html
+++ b/src/html/plans-show.html
@@ -170,92 +170,195 @@
                     <small>Consectetur adipiscing. Lorem ipsum dolor sit amet elit. <a href="#" title="">Aenean ac magna.</a></small>
                 </div>
                 <div class="col-lg-8">
-                    <div class="col-lg-8">
-                        <span>Current name</span>
+                    <div class="col-lg-8 mb_20">
+                        <span>Name</span>
                     </div>
                     <div class="col-lg-4">
                         <button class="pull-right btn btn-default btn-inverse">Edit name</button>
                     </div>
+                    <div class="col-lg-12 mb_20">
+                        <input type="checkbox" />
+                        <strong class="ml_10">Enabled</strong>
+                    </div>
+                    <div class="col-lg-12">
+                        <input type="checkbox" />
+                        <strong class="ml_10">Hourly</strong>
+                    </div>
                 </div>
             </div>
+            
             <div class="comp-s-item border-bottom clearfix">
                 <div class='col-lg-4'>
-                    <h4>Description</h4>
+                    <h4>General details</h4>
                     <small>Consectetur adipiscing. Lorem ipsum dolor sit amet elit. <a href="#" title="">Aenean ac magna.</a></small>
                 </div>
                 <div class="col-lg-8">
-                    <div class="col-lg-8">
-                        <span>High Performance Server in a Class A Datacenter</span>
-                    </div>
-                    <div class="col-lg-4">
-                        <button class="pull-right btn btn-default btn-inverse">Edit description</button>
-                    </div>
-                </div>
-            </div>
-            <div class="comp-s-item border-bottom clearfix">
-                <div class='col-lg-4'>
-                    <h4>Icon</h4>
-                    <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <a href="#" title="">Aenean ac magna ipsum.</a></small>
-                </div>
-                <div class="col-lg-8">
-                    <div class="clearfix">
-                        <div class="col-sm-3">
-                            <span>Current Icon:</span>
-                        </div>
-                        <div class="col-sm-7">
-                            <i class="fa fa-cloud"></i>
-                        </div>
-                        <div class="pull-right">
-                            <button class="btn btn-default btn-inverse">Edit icon</button>
-                        </div>
-                    </div>
-                    <hr>
                     <div class="form-group">
                         <form class="simple_form form-horizontal form-group string required">
-                            <label class="col-sm-3 string required control-label">
-                                New icon: 
-                            </label>
-                            <div class="col-sm-7">
-                                <select class="form-control" style="font-family: 'FontAwesome', Helvetica;">
-                                    <option>Cloud - &#xf0c2;</option>
-                                    <option>Truck - &#xf0d1;</option>
-                                    <option>Plane - &#xf072;</option>
-                                    <option>Ship - &#xf21a;</option>
-                                    <option>Car - &#xf1b9;</option>
-                                </select>
+                            <div class="row">
+                                <label class="col-sm-4 string required control-label">
+                                    Processor
+                                </label>
+                                <div class="col-sm-7">
+                                    <select class="form-control">
+                                        <option>1 x 2.0 GHz Core</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <label class="col-sm-4 string required control-label">
+                                    Memory
+                                </label>
+                                <div class="col-sm-7">
+                                    <select class="form-control">
+                                        <option>1 Gb</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <label class="col-sm-4 string required control-label">
+                                    Datacenter
+                                </label>
+                                <div class="col-sm-7">
+                                    <select class="form-control">
+                                        <option>Amsterdam 1</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <label class="col-sm-4 string required control-label">
+                                    Operating system
+                                </label>
+                                <div class="col-sm-7">
+                                    <select class="form-control">
+                                        <option>CentOS - Latest</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <label class="col-sm-4 string required control-label">
+                                    Network component
+                                </label>
+                                <div class="col-sm-7">
+                                    <select class="form-control">
+                                        <option>10 Mbps Public & Private Network Uplinks10 Mpbs</option>
+                                    </select>
+                                </div>
                             </div>
                         </form>
                     </div>
                 </div>
             </div>
-            
-            <div class="comp-s-item clearfix">
+
+            <div class="comp-s-item border-bottom clearfix">
                 <div class='col-lg-4'>
-                    <h4>Enable Category</h4>
-                    <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <a href="#" title="">Aenean ac magna ipsum.</a></small>
+                    <h4>Disk San</h4>
+                    <small>Consectetur adipiscing. Lorem ipsum dolor sit amet elit. <a href="#" title="">Aenean ac magna.</a></small>
                 </div>
                 <div class="col-lg-8">
-                    <input type="checkbox" />
-                    <strong class="ml_10">Enabled</strong>
+                    <div class="form-group">
+                        <form class="simple_form form-horizontal form-group string required">
+                            <div class="row">
+                                <label class="col-sm-4 string required control-label">
+                                    Disk San 1
+                                </label>
+                                <div class="col-sm-7">
+                                    <select class="form-control">
+                                        <option>10 GB (San)</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <label class="col-sm-4 string required control-label">
+                                    Disk San 2
+                                </label>
+                                <div class="col-sm-7">
+                                    <select class="form-control">
+                                        <option>10 GB (San)</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <label class="col-sm-4 string required control-label">
+                                    Disk San 3
+                                </label>
+                                <div class="col-sm-7">
+                                    <select class="form-control">
+                                        <option>10 GB (San)</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <label class="col-sm-4 string required control-label">
+                                    Disk San 4
+                                </label>
+                                <div class="col-sm-7">
+                                    <select class="form-control">
+                                        <option>10 GB (San)</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <label class="col-sm-4 string required control-label">
+                                    Disk San 5
+                                </label>
+                                <div class="col-sm-7">
+                                    <select class="form-control">
+                                        <option>10 GB (San)</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="comp-s-item border-bottom clearfix">
+                <div class='col-lg-4'>
+                    <h4>Disk Local</h4>
+                    <small>Consectetur adipiscing. Lorem ipsum dolor sit amet elit. <a href="#" title="">Aenean ac magna.</a></small>
+                </div>
+                <div class="col-lg-8">
+                    <div class="form-group">
+                        <form class="simple_form form-horizontal form-group string required">
+                            <div class="row">
+                                <label class="col-sm-4 string required control-label">
+                                    Disk Local 1
+                                </label>
+                                <div class="col-sm-7">
+                                    <select class="form-control">
+                                        <option>10 GB (Local)</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <label class="col-sm-4 string required control-label">
+                                    Disk Local 2
+                                </label>
+                                <div class="col-sm-7">
+                                    <select class="form-control">
+                                        <option>10 GB (Local)</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
-        <!-- preview -->
+        <!-- summary -->
         <div class="col-lg-4">
             <div class="comp-s-item clearfix">
                 <div class="mt_20">
-                    <div class="box_category">
-                        <div class="box_icon">
-                            <i class="fa fa-cloud"></i>
-                        </div>
-                        <div class="box_desc">
-                            <h3>
-                                Servers
-                                <span>High Performance Server in a Class A Datacenter</span>
-                            </h3>
-                            <a href="http://foo.localhost:3004/br/shop/servers" class="btn btn-default btn-inverse">Veja as Opções</a>
-                        </div>
-                    </div>
+                    Summary
                 </div>
             </div>
         </div>
