Plans page is now created

--- a/src/html/plans-show.html
+++ b/src/html/plans-show.html
@@ -245,7 +245,7 @@
                                 </label>
                                 <div class="col-sm-7">
                                     <select class="form-control">
-                                        <option>10 Mbps Public & Private Network Uplinks10 Mpbs</option>
+                                        <option>10 Mbps Public & Private Network Uplinks</option>
                                     </select>
                                 </div>
                             </div>
@@ -357,8 +357,100 @@
         <!-- summary -->
         <div class="col-lg-4">
             <div class="comp-s-item clearfix">
-                <div class="mt_20">
-                    Summary
+                <div class="summary">
+                    <h4 class="mb_20">Summary</h4>
+                    <h5 class="mb_10">Basic information</h5>
+                    <div class="summary-group">
+                        <div class="summary-label col-sm-5">
+                            <span>Name</span>
+                        </div>
+                        <div class="col-sm-7">
+                            <span>Lorem ipsum</span>
+                        </div>
+                    </div>
+                    <div class="summary-group">
+                        <div class="summary-label col-sm-5">
+                            <span>Enabled</span>
+                        </div>
+                        <div class="col-sm-7">
+                            <span>yes</span>
+                        </div>
+                    </div>
+                    <h5 class="mt_20">General details</h5>
+                    <div class="summary-group">
+                        <div class="summary-label col-sm-5">
+                            <span>Processor</span>
+                        </div>
+                        <div class="col-sm-7">
+                            <span>1 x 2.0 GHz</span>
+                        </div>
+                    </div>
+                    <div class="summary-group">
+                        <div class="summary-label col-sm-5">
+                            <span>Memory</span>
+                        </div>
+                        <div class="col-sm-7">
+                            <span>1 Gb</span>
+                        </div>
+                    </div>
+                    <div class="summary-group">
+                        <div class="summary-label col-sm-5">
+                            <span>Datacenter</span>
+                        </div>
+                        <div class="col-sm-7">
+                            <span>Amsterdam 1</span>
+                        </div>
+                    </div>
+                    <div class="summary-group">
+                        <div class="summary-label col-sm-5">
+                            <span>Operating system</span>
+                        </div>
+                        <div class="col-sm-7">
+                            <span>CentOS - Latest</span>
+                        </div>
+                    </div>
+                    <div class="summary-group">
+                        <div class="summary-label col-sm-5">
+                            <span>Network component</span>
+                        </div>
+                        <div class="col-sm-7">
+                            <span>10 Mbps Public & Private Network Uplinks</span>
+                        </div>
+                    </div>
+                    <h5 class="mt_20">Disk San</h5>
+                    <div class="summary-group">
+                        <div class="summary-label col-sm-5">
+                            <span>Disk San 1</span>
+                        </div>
+                        <div class="col-sm-7">
+                            <span>10 Gb</span>
+                        </div>
+                    </div>
+                    <div class="summary-group">
+                        <div class="summary-label col-sm-5">
+                            <span>Disk San 2</span>
+                        </div>
+                        <div class="col-sm-7">
+                            <span>40 Gb</span>
+                        </div>
+                    </div>
+                    <div class="summary-group">
+                        <div class="summary-label col-sm-5">
+                            <span>Disk San 3</span>
+                        </div>
+                        <div class="col-sm-7">
+                            <span>100 Gb</span>
+                        </div>
+                    </div>
+                    <h5 class="mt_20">Disk Local</h5>
+                    <div class="summary-group">
+                        <div class="summary-label col-sm-5">
+                            <span>Disk Local 1</span>
+                        </div>
+                        <div class="col-sm-7">
+                            <span>10 Gb</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
