Fixing a tag that was not closing properly

--- a/src/html/companies-categories-show-groups-list.html
+++ b/src/html/companies-categories-show-groups-list.html
@@ -156,7 +156,7 @@
     </div>
     <div class="col-lg-3 pull-right">
         <a class="btn btn-danger pull-right " href="#" role="button"><i class="fa fa-times"></i> Delete Category</a>
-        <a class="btn btn-default pull-right mr_20" role="button" <i class="fa fa-floppy-o"></i> Save</a>
+        <a class="btn btn-default pull-right mr_20" role="button"> <i class="fa fa-floppy-o"></i> Save</a>
     </div>
 </div>
 <div class='row wrapper backs-nav'>
