--- a/src/html/plans-show.html
+++ b/src/html/plans-show.html
@@ -320,7 +320,7 @@
                     </div>
                 </div>
             </div>
-            <div class="comp-s-item border-bottom clearfix">
+            <div class="comp-s-item clearfix">
                 <div class='col-lg-4'>
                     <h4>Disk Local</h4>
                     <small>Consectetur adipiscing. Lorem ipsum dolor sit amet elit. <a href="#" title="">Aenean ac magna.</a></small>
