--- a/src/html/shop-plans-customize.html
+++ b/src/html/shop-plans-customize.html
@@ -40,9 +40,7 @@
                 </li>
             </ul>
         </div>
-        <form id="get_price" action="" accept-charset="UTF-8" method="post">
-            <input name="utf8" type="hidden" value="✓">
-            <input type="hidden" name="" value="">
+        <form accept-charset="UTF-8" method="post">
             <div class="container clearfix">
                 <div class="col-md-9">
                     <!-- New VM -->
